begin login logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Bootstrap 101 Template</title>
         <!-- Latest compiled and minified CSS -->
@@ -11,41 +12,81 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <style>
+            body{
+                background: #e3eef5;
+                font-family: 'Open Sans', sans-serif;
+            }
+            .form-signin {
+                padding: 15px;
+                margin: 0 auto;
+            }
+            .form-signin .form-signin-heading,
+            .form-signin .checkbox {
+                margin-bottom: 10px;
+                font-size:20px;
+            }
+            .form-signin .checkbox {
+                font-weight: normal;
+            }
+            .form-signin .form-control {
+                position: relative;
+                height: auto;
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+                padding: 10px;
+                font-size: 16px;
+            }
+            .form-signin .form-control:focus {
+                z-index: 2;
+            }
+            .form-signin input[type="email"] {
+                margin-bottom: -1px;
+                border-bottom-right-radius: 0;
+                border-bottom-left-radius: 0;
+            }
+            .form-signin input[type="password"] {
+                margin-bottom: 10px;
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+            }
+        </style>
     </head>
     <body>
 
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
-                  <div class="container-fluid">
+                    <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="/"><%= title %></a>
-                    </div>
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="/"><%= title %></a>
+                        </div>
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <p class="navbar-text" id="loggedinText"></p>
-                      <ul class="nav navbar-nav">
-                        <li><a href="">Add Beacon</a></li>
-                        <li><a href="#">Add RFID Reader</a></li>
-                      </ul>
-                      <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Logout</a></li>
-                      </ul>
-                    </div><!-- /.navbar-collapse -->
-                  </div><!-- /.container-fluid -->
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <p class="navbar-text" id="loggedinText"></p>
+                            <ul class="nav navbar-nav">
+                                <li><a href="">Add Beacon</a></li>
+                                <li><a href="#">Add RFID Reader</a></li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">Logout</a></li>
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+                    </div><!-- /.container-fluid -->
                 </nav>
             </div>
             <div class="row">
-                <div class="col-md-12" id="content">
-                    <input type="button" onclick="socket.emit('status');" value="pop">
+                <div class="col-md-12 content">
+                    <input type="button" onclick="socket.emit('status');" value="status"> <input type="button" onclick="socket.emit('login_box');" value="login box">
                 </div>
             </div>
         </div>
@@ -61,7 +102,10 @@
             socket.on('connect', function (data) {
                 socket.emit('status');
             });
-            socket.emit('login',{user:"test",pass:'me'});
+            socket.on('page_load', function (data) {
+                $(data.wrapper)[data.cover](data.html);
+            });
+            socket.emit('login_exec',{user:"test",pass:'me'});
         </script>
     </body>
 </html>
