--- a/views/register/box.ejs
+++ b/views/register/box.ejs
@@ -7,6 +7,6 @@
         <input type="password" class="form-control inputPassword form-middle" style="margin-bottom: -1px;" id="inputPassword" placeholder="Password" required>
         <label for="inputPassword2" class="sr-only">Password</label>
         <input type="password" class="form-control inputPassword2" id="inputPassword2" placeholder="Confirm Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
 </div>
