--- a/views/register/box.ejs
+++ b/views/register/box.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-4 col-md-offset-4">
-    <form class="form-signin" action="javascript:socket.emit('register_exec',{user:$('.inputEmail').val(),pass:$('.inputPassword').val()});showLoader();" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
+    <form class="form-signin" action="javascript:register($('.inputEmail').val(),$('.inputPassword').val(),$('.inputPassword2').val());" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
         <h2 class="form-signin-heading">Login to <%=settings.title%></h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" class="form-control inputEmail" id="inputEmail" placeholder="Email address" required autofocus>
