--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
         <style>
             body{
                 background: #e3eef5;
@@ -72,7 +73,6 @@
         </style>
     </head>
     <body>
-
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -108,10 +108,14 @@
             </div>
             <div class="row">
                 <div class="col-md-12 content"></div>
+                <div class="col-md-4 col-md-offset-4 al-wrap" style="display:none;position:absolute;top:20px;">
+                    <div class="alert alert-warning al-msg" role="alert"></div>
+                </div>
             </div>
         </div>
         <img src="images/ring-alt.svg" class="loader">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script language="javascript">
@@ -134,27 +138,9 @@
                 $(data.wrapper)[data.cover](data.html);
                 hideLoader();
             });
-            function newBeacon(){
-                capturePoints.call=function(coords){
-                    socket.emit('new_beacon_page',{
-                        lat: coords.lat(),
-                        lng: coords.lng()
-                    });
-                };
-            }
-            function newRFID(){
-                capturePoints.call=function(coords){
-                    socket.emit('new_rfid_page',{
-                        lat: coords.lat(),
-                        lng: coords.lng()
-                    });
-                };
-            }
-            var capturePoints={
-                call:function(c){}
-            };
         </script>
         <script src="/javascripts/client.js"></script>
+        <script src="/javascripts/map.js"></script>
         <script src="/javascripts/usermanagement.js"></script>
     </body>
 </html>
