--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Bootstrap 101 Template</title>
+        <title>Linkality</title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -25,7 +25,8 @@
             .form-signin .form-signin-heading,
             .form-signin .checkbox {
                 margin-bottom: 10px;
-                font-size:20px;
+                font-size:16px;
+                font-weight:bold;
             }
             .form-signin .checkbox {
                 font-weight: normal;
@@ -101,6 +102,13 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right loggedIn-show" style="display: none;">
                                 <li><a class="link" onclick="logout();">Logout</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wipe <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="javascript:;" onclick="socket.emit('wipe', {locations:1});">Wipe Locations</a></li>
+                                        <li><a href="javascript:;" onclick="socket.emit('wipe', {users:1});">Wipe Users</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.container-fluid -->
