--- a/views/register/box.ejs
+++ b/views/register/box.ejs
@@ -1,12 +1,30 @@
 <div class="col-md-4 col-md-offset-4">
-    <form class="form-signin" action="javascript:register($('.inputEmail').val(),$('.inputPassword').val(),$('.inputPassword2').val());" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
-        <h2 class="form-signin-heading">Login to <%=settings.title%></h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" class="form-control inputEmail" id="inputEmail" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" class="form-control inputPassword form-middle" style="margin-bottom: -1px;" id="inputPassword" placeholder="Password" required>
-        <label for="inputPassword2" class="sr-only">Password</label>
-        <input type="password" class="form-control inputPassword2" id="inputPassword2" placeholder="Confirm Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    <form class="form-signin panel panel-default" action="javascript:register($('.inputEmail').val(),$('.inputPassword').val(),$('.inputPassword2').val());" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
+        <h2 class="form-signin-heading">Register to <%=settings.title%></h2>
+        <br/>
+        <div class="row">
+            <div class="col-md-4" style="text-align:right;"><label for="inputEmail" style="padding-top:12px;">Email</label></div>
+            <div class="col-md-8"><input type="email" class="form-control inputEmail" id="inputEmail" placeholder="Email" required></div>
+        </div>
+        <br/>
+        <div class="row">
+            <div class="col-md-4" style="text-align:right;"><label for="inputPassword" style="padding-top:12px;">Password</label></div>
+            <div class="col-md-8"><input type="password" class="form-control inputPassword form-middle" style="margin-bottom: -1px;" id="inputPassword" placeholder="Password" required></div>
+        </div>
+        <br/>
+        <div class="row">
+            <div class="col-md-4" style="text-align:right;"><label for="inputPassword2" style="padding-top:12px;">Confirm Password</label></div>
+            <div class="col-md-8"><input type="password" class="form-control inputPassword2" id="inputPassword2" placeholder="Confirm Password" required></div>
+        </div>
+        <br/>
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                 <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+            </div>
+        </div>
     </form>
 </div>
+<script language="javascript">
+    $(".inputEmail").focus();
+</script>
