--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,9 @@
             <div class="row">
                 <div class="col-md-12 content"></div>
                 <div class="col-md-4 col-md-offset-4 al-wrap" style="display:none;position:absolute;top:20px;">
-                    <div class="alert alert-warning al-msg" role="alert"></div>
+                    <div class="alert alert-warning al-msg" role="alert">
+
+                    </div>
                 </div>
             </div>
         </div>
