--- a/views/login/box.ejs
+++ b/views/login/box.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-4 col-md-offset-4 loginBox">
     <form class="form-signin panel panel-default" action="javascript:login($('.inputEmail').val(),$('.inputPassword').val());" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
         <h2 class="form-signin-heading">Login to <%=settings.title%></h2>
         <br/>
