--- a/views/register/box.ejs
+++ b/views/register/box.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-4 col-md-offset-4 registerBox">
     <form class="form-signin panel panel-default" action="javascript:register($('.inputEmail').val(),$('.inputPassword').val(),$('.inputPassword2').val());" style="background:#fff;padding:15px;padding-top:5px;border-radius: 7px;">
         <h2 class="form-signin-heading">Register to <%=settings.title%></h2>
         <br/>
