--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,6 +108,7 @@
                                         <li><a href="javascript:;" onclick="socket.emit('wipe', {locations:1});">Wipe Locations</a></li>
                                         <li><a href="javascript:;" onclick="socket.emit('wipe', {users:1});">Wipe Users</a></li>
                                         <li><a href="javascript:;" onclick="socket.emit('wipe', {persons:1});">Wipe Persons</a></li>
+                                        <li><a href="javascript:;" onclick="socket.emit('wipe', {rooms:1});">Wipe Rooms</a></li>
                                     </ul>
                                 </li>
                             </ul>
